# im19result

./: .gitignore  README.md  assets.json  gg.sh  index.html  latest.json  output.txt  package.json  pnpm-lock.yaml
.github/workflows/: latest.json.yml  latest.yml  main.yml  se.yml  sr.yml
server_result/: Cargo.toml  build.sh  output.txt
server_result/src/: main.rs
src/: App.jsx  ProfButtons.jsx  ResultDisplay.jsx  ResultFetcher.jsx  RollNumberForm.jsx  individual_result.js  resultProcessorr.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
