[package]
name = "server_result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
regex = "1.10.4"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Dependencies for Apple Silicon (M1)
[target.'cfg(target_arch = "x86_64")'.dependencies]
# Dependencies for Intel
