[package]
name = "result_im_19"
version = "1.144.134"
description = "Checking Result of IM-19"
authors = ["kamran"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "2", features = ["updater", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.23"
tokio = "1.47.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
